# uvc

./: main_uvicorn.py  test.sh
3.11/: pyproject.toml
3.12/: pyproject.toml
go_openai/: .gitignore  go.mod  go.sum  hello-openai.go
hello_openai/: .gitignore  README.md  hello.py  hello_openai.py  pyproject.toml  test.sh
pypy3.10/: .python-version  main_uvicorn.py  pyproject.toml
