[project]
name = "hello-python3-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "austin-dist>=3.7.0",
    "austin-python>=1.7.1",
    "austin-tui>=1.2.3",
    "austin-web>=0.3.0",
    "httptools>=0.6.4",
    "uvicorn>=0.30.1",
    "uvloop>=0.21.0",
]
